Fix scroll and overflow animation for large screen

--- a/src/scss/partials/pages/_pages.scss
+++ b/src/scss/partials/pages/_pages.scss
@@ -44,12 +44,29 @@
   }
 
   .tabs-container {
-    max-width: 720px;
+    $max-width: 720px;
+    max-width: $max-width;
     min-width: auto;
     margin: 0 auto;
-    overflow-x: hidden;
-    /* height: 100%;
-    width: 100%; */
+    position: relative;
+
+    @media only screen and (min-width: $max-width + 1px) {
+      &:before, &:after {
+        content: " ";
+        position: absolute;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background: #fff;
+        z-index: 1;
+      }
+  
+      &:after {
+        left: 100%;
+      }
+    }
 
     > div {
       /* justify-content: center; */
